IBOutletを消した、IBActionのコードの中に他のボタンを入れた(連結させた)を追記しました。

--- a/WildGlass2/Base.lproj/Main.storyboard
+++ b/WildGlass2/Base.lproj/Main.storyboard
@@ -84,7 +84,7 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                                 <connections>
-                                    <action selector="buttonitii:" destination="I3i-b5-f3t" eventType="touchUpInside" id="WGD-Co-i7b"/>
+                                    <action selector="touchbutton:" destination="I3i-b5-f3t" eventType="touchUpInside" id="wD9-Wt-fdd"/>
                                     <segue destination="Unj-0k-Hg5" kind="presentation" identifier="button1" id="DHA-fG-Kdx"/>
                                 </connections>
                             </button>
@@ -97,6 +97,7 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                                 <connections>
+                                    <action selector="touchbutton:" destination="I3i-b5-f3t" eventType="touchUpInside" id="ihp-RJ-4Df"/>
                                     <segue destination="Unj-0k-Hg5" kind="presentation" identifier="button3" id="ukW-pS-I3m"/>
                                 </connections>
                             </button>
@@ -109,6 +110,7 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                                 <connections>
+                                    <action selector="touchbutton:" destination="I3i-b5-f3t" eventType="touchUpInside" id="cng-11-dHd"/>
                                     <segue destination="Unj-0k-Hg5" kind="presentation" identifier="button4" id="r0w-IP-iaT"/>
                                 </connections>
                             </button>
@@ -121,11 +123,12 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                                 <connections>
+                                    <action selector="touchbutton:" destination="I3i-b5-f3t" eventType="touchUpInside" id="ABI-xa-gIZ"/>
                                     <segue destination="Unj-0k-Hg5" kind="presentation" identifier="button5" id="mk3-eL-AKp"/>
                                 </connections>
                             </button>
                             <button opaque="NO" tag="2" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="t8p-2f-1CW">
-                                <rect key="frame" x="267" y="281" width="103" height="46"/>
+                                <rect key="frame" x="267" y="278" width="103" height="46"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
@@ -133,6 +136,7 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                                 <connections>
+                                    <action selector="touchbutton:" destination="I3i-b5-f3t" eventType="touchUpInside" id="WoF-hF-W9W"/>
                                     <segue destination="Unj-0k-Hg5" kind="presentation" identifier="button2" id="bon-rb-nJt"/>
                                 </connections>
                             </button>
@@ -141,7 +145,6 @@
                         <viewLayoutGuide key="safeArea" id="Fvk-5l-Rwi"/>
                     </view>
                     <connections>
-                        <outlet property="ButtonIndex" destination="0bv-f3-z1l" id="HtI-49-dlT"/>
                         <segue destination="Unj-0k-Hg5" kind="presentation" identifier="next2" id="rTi-eF-qkp"/>
                     </connections>
                 </viewController>
