IBActionのtouchbuttonのtagの数字間違えの変更、unwindsegue(先頭に戻る画面遷移)の設定を記述しました。

--- a/WildGlass2/Base.lproj/Main.storyboard
+++ b/WildGlass2/Base.lproj/Main.storyboard
@@ -163,6 +163,9 @@
                                 <state key="normal" title="BACK">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <connections>
+                                    <segue destination="7Kg-DY-iiS" kind="unwind" unwindAction="backTOTitleWithSender:" id="v8K-NP-bit"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="食べれる" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tml-GW-U5g">
                                 <rect key="frame" x="56" y="260" width="303" height="127"/>
@@ -180,6 +183,7 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wOG-4a-ldJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <exit id="7Kg-DY-iiS" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="1128.985507246377" y="119.86607142857142"/>
         </scene>
